# opticr

./: .gitignore  .pylintrc  .pyre_configuration  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: test.yml
opticr/: __init__.py  config.py  fetchdocument.py  opticr.py  version.py
opticr/cmd/: main.py
opticr/ocr/: baseocr.py  googlevision.py  tesseract.py
tests/: test_opticr.py
