[tool.poetry]
name = "opticr"
version = "0.2.0"
description = "expose a single interface and API to few OCR tools"
authors = ["lzayep <ec@lza.sh>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11 < 4"
pydantic = "*"
requests = "*"
ocrmypdf = "*"
pytesseract = "*"
pdf2image = "*"
ant31box = {git = "https://github.com/ant31/ant31box", extras=["s3"], branch="main"}
pylint-pydantic = "^0.3.2"
google-cloud-vision = "^3.7.3"
google-cloud-storage = "^2.17.0"

[tool.poetry.group.dev.dependencies]
black = "*"
ipython = "*"
pylint = "*"
pyre-check = "*"
types-requests = "*"
isort = "*"
pytest = "<8"
coverage = "*"
pytest-cov = "*"
bumpversion = "*"
pytest-ordering = "*"
pytest-asyncio = "*"
pyright = "*"
pytest-aioresponses = "*"
ruff = "^0.5.2"


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 100
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
